tema4/ejerc3/deploy-echo-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tema4-ejerc3-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tema4-ejerc3-service
  template:
    metadata:
      labels:
        app: tema4-ejerc3-service
    spec:
      containers:
      - name: tema4-ejerc3-service
        image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
        ports:
        - containerPort: 8080
