tema4/ejerc3/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: tema4-ejerc3-service
  labels:
    app: tema4-ejerc3-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: tema4-ejerc3-service
