tema4/ejerc3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tema4-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "tema4.imagina.k8s.io"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: tema4-ejerc3-service
              port:
                number: 80
